# nvsci_test

./: .clangd  CMakeLists.txt
.zed/: settings.json
src/: common.c  common.cu  common.h  cpu_receiver.c  cpu_sender.c  cucommon.h  cuda.cu  receiver.c  receiver.cu  sender.c  sender.cu
